完成了登录

--- a/moon/.settings/org.eclipse.core.resources.prefs
+++ b/moon/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,6 @@
 eclipse.preferences.version=1
-encoding//src/com/yx/entity/User.java=UTF-8
+encoding//WebRoot/resources/sg=UTF-8
+encoding//WebRoot/resources/sg/css/animate.css=UTF-8
+encoding//WebRoot/resources/sg/css/main.css=UTF-8
+encoding//WebRoot/resources/sg/css/tz-tab.css=UTF-8
 encoding/<project>=UTF-8
