--- a/moon/.settings/org.eclipse.core.resources.prefs
+++ b/moon/.settings/org.eclipse.core.resources.prefs
@@ -3,4 +3,5 @@ encoding//WebRoot/resources/sg=UTF-8
 encoding//WebRoot/resources/sg/css/animate.css=UTF-8
 encoding//WebRoot/resources/sg/css/main.css=UTF-8
 encoding//WebRoot/resources/sg/css/tz-tab.css=UTF-8
+encoding//src/com/yx/utils/TmStringUtils.java=UTF-8
 encoding/<project>=UTF-8
