--- a/moon/.settings/org.eclipse.core.resources.prefs
+++ b/moon/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebRoot/WEB-INF/pages/template/list.jsp=UTF-8
 encoding//WebRoot/resources/sg=UTF-8
 encoding//WebRoot/resources/sg/css/animate.css=UTF-8
 encoding//WebRoot/resources/sg/css/main.css=UTF-8
