--- a/moon/config/db/db.properties
+++ b/moon/config/db/db.properties
@@ -1,5 +1,5 @@
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/backstage?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+db.url=jdbc:mysql://localhost:3306/backstage?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 #db.username=yx
 #db.password=121000
 
