--- a/moon/WebRoot/WEB-INF/web.xml
+++ b/moon/WebRoot/WEB-INF/web.xml
@@ -5,7 +5,9 @@
    <!-- spring的配置文件的加载 -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:spring/applicationContext.xml</param-value>
+    <param-value>classpath:spring/applicationContext.xml,
+    			classpath:spring/applicationContext-*.xml
+    </param-value>
   </context-param>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
