--- a/moon/.settings/com.genuitec.eclipse.core.prefs
+++ b/moon/.settings/com.genuitec.eclipse.core.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-validator.Checked=WebRoot/WEB-INF/common/left.jsp
+validator.Checked=WebRoot/WEB-INF/pages/adminstat/contentList.jsp,WebRoot/WEB-INF/common/left.jsp,WebRoot/resources/js/echarts-2.2.7
 validator.Unchecked=
