--- a/moon/.settings/org.eclipse.core.resources.prefs
+++ b/moon/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//WebRoot/WEB-INF/pages/template/list.jsp=UTF-8
+encoding//WebRoot/WEB-INF/pages/uplod/yupload.jsp=UTF-8
 encoding//WebRoot/resources/sg=UTF-8
 encoding//WebRoot/resources/sg/css/animate.css=UTF-8
 encoding//WebRoot/resources/sg/css/main.css=UTF-8
