--- a/moon/config/db/db.properties
+++ b/moon/config/db/db.properties
@@ -6,6 +6,12 @@ db.url=jdbc:mysql://localhost:3306/backstage?useUnicode=true&characterEncoding=u
 db.username=ZRxCCfPfGJQ=
 db.password=dKWWb1QrwJk=
 
+#mysalbin\目录
+mysql.root.bin=D:/MYSPL/mysql-5.6.11-winx64/bin/
+#数据库备份路径
+db.back.sql=G:/SQLBACKDB/
+
+
 #db.driver=com.mysql.jdbc.Driver
 #db.url=jdbc:mysql://localhost:3306/kekeblog?useUnicode=true&characterEncoding=utf8
 #db.username=Vv1eKxKHh3s=
