--- a/moon/config/log4j.properties
+++ b/moon/config/log4j.properties
@@ -1,43 +1,43 @@
-#loglog4j.rootLogger=级别，输出源1, 输出源2……….. 
-#-级别:  DEBUG<INFO<WARN<ERROR<FATAL 
-#-规格:  如果一条日志信息的级别大于等于配置文件的级别，就记录 
-#-常见输出源:  CONSOLE,FILE 
-#-例子：log4j.rootLogger=WARN,CONSOLE,FILE 
-#配置输出源所对应的辅助类： 
-#如果输出到文件就写FileAppender 
-#log4j.appender.输出源名称=类名 
-#输出源名称为：输出源1写的名称 
-#指写文件名： log4j.appender.FILE1.file=c:/file1.log 
-#指定布局方式（消息放入文件之后，怎样布局）： log4j.appender.FILE1.layout= org.apache.log4j.SimpleLayout 
-#三种布局 
-# org.apache.log4j.SimpleLayout （包含日志信息的级别和信息字符串）
-# org.apache.log4j.HTMLLayout （以HTML表格形式布局）
-# org.apache.log4j.PatternLayout(自定义格式) （可以灵活地指定布局模式）
-#只有在自定义的格式下，才可以使用如下 
-#log4j.appender.输出源名称.layout.ConversionPattern= 
-#-------%p%n%c%n%m%n%d%n%l%n%----n% 
+#loglog4j.rootLogger=级别，输出源1, 输出源2……….. 
+#-级别:  DEBUG<INFO<WARN<ERROR<FATAL 
+#-规格:  如果一条日志信息的级别大于等于配置文件的级别，就记录 
+#-常见输出源:  CONSOLE,FILE 
+#-例子：log4j.rootLogger=WARN,CONSOLE,FILE 
+#配置输出源所对应的辅助类： 
+#如果输出到文件就写FileAppender 
+#log4j.appender.输出源名称=类名 
+#输出源名称为：输出源1写的名称 
+#指写文件名： log4j.appender.FILE1.file=c:/file1.log 
+#指定布局方式（消息放入文件之后，怎样布局）： log4j.appender.FILE1.layout= org.apache.log4j.SimpleLayout 
+#三种布局 
+# org.apache.log4j.SimpleLayout （包含日志信息的级别和信息字符串）
+# org.apache.log4j.HTMLLayout （以HTML表格形式布局）
+# org.apache.log4j.PatternLayout(自定义格式) （可以灵活地指定布局模式）
+#只有在自定义的格式下，才可以使用如下 
+#log4j.appender.输出源名称.layout.ConversionPattern= 
+#-------%p%n%c%n%m%n%d%n%l%n%----n% 
 #%t:为线程名
-#%p:日志级别 
+#%p:日志级别 
 #%c:日志消息所在类名
 #%m:消息内容
 #%d:发生时间
 #%l:行数
-#%n:换行 
-#如果要显示中文，需要转码 
-#Native2ascii   -encoding    gb2312  源文件  目标文件 
-#指写文件路径 ${CATALINA.HOME}/logs:输出到tomcat的logs目录下
-#配置例子全： 
-#log4j.rootLogger=WARN,FILE1,FILE2,FILE3 
-# log4j.appender.FILE1=org.apache.log4j.FileAppender 
-# log4j.appender.FILE1.file=${CATALINA.HOME}/logs/file1.log 
-# log4j.appender.FILE1.layout= org.apache.log4j.SimpleLayout  
-# log4j.appender.FILE2=org.apache.log4j.FileAppender 
-# log4j.appender.FILE2.file=${CATALINA.HOME}/logs/file1.html 
-# log4j.appender.FILE2.layout= org.apache.log4j.HTMLLayout
-#log4j.appender.FILE3=org.apache.log4j.FileAppender 
-#log4j.appender.FILE3.file=${CATALINA.HOME}/logs/file3.log 
-#log4j.appender.FILE3.layout= org.apache.log4j.PatternLayout 
-#log4j.appender.FILE3.layout.ConversionPattern=-------%p%n%c%n%m%n%d%n%l%n%----n% 
+#%n:换行 
+#如果要显示中文，需要转码 
+#Native2ascii   -encoding    gb2312  源文件  目标文件 
+#指写文件路径 ${CATALINA.HOME}/logs:输出到tomcat的logs目录下
+#配置例子全： 
+#log4j.rootLogger=WARN,FILE1,FILE2,FILE3 
+# log4j.appender.FILE1=org.apache.log4j.FileAppender 
+# log4j.appender.FILE1.file=${CATALINA.HOME}/logs/file1.log 
+# log4j.appender.FILE1.layout= org.apache.log4j.SimpleLayout  
+# log4j.appender.FILE2=org.apache.log4j.FileAppender 
+# log4j.appender.FILE2.file=${CATALINA.HOME}/logs/file1.html 
+# log4j.appender.FILE2.layout= org.apache.log4j.HTMLLayout
+#log4j.appender.FILE3=org.apache.log4j.FileAppender 
+#log4j.appender.FILE3.file=${CATALINA.HOME}/logs/file3.log 
+#log4j.appender.FILE3.layout= org.apache.log4j.PatternLayout 
+#log4j.appender.FILE3.layout.ConversionPattern=-------%p%n%c%n%m%n%d%n%l%n%----n% 
 log4j.rootLogger=ERROR, Console, infoLog,stdout
 #配置日志信息输出目的地 log4j.appender.appenderName = fully.qualified.name.of.appender.class
 # 1.org.apache.log4j.ConsoleAppender（控制台）
@@ -67,7 +67,7 @@ log4j.logger.org.apache.myfaces.shared_impl.renderkit.html=DEBUG
 log4j.logger.org.hibernate=DEBUG
 log4j.logger.org.springframework=DEBUG
 #指定com.tm包下的所有类的等级为DEBUG
-log4j.logger.com.tz=DEBUG
+log4j.logger.com.yx=DEBUG
 log4j.logger.org.apache.struts2.json=DEBUG
 log4j.logger.java.sql.Connection=DEBUG
 log4j.logger.java.sql.Statement=DEBUG
