--- a/ksd-project/src/main/resources/db.properties
+++ b/ksd-project/src/main/resources/db.properties
@@ -3,3 +3,9 @@ jdbc.url=jdbc:mysql://192.168.1.240:3306/ksd?characterEncoding=UTF-8&amp;autoRec
 jdbc.username=soushi
 jdbc.password=sou_shi
 jdbc.connectionProperties=userOldAliasMetadateBehavior=true
+
+
+m_jdbc.url=192.168.1.240:27017
+m_jdbc.username=ksd
+m_jdbc.password=ksd
+m_jdbc.db.name=ksd
